# COCOA

./: .gitignore  CMakeLists.txt  README.md  install.sh  install.sh.save  test100.ctgs
cmake/: FindPythonLibs.cmake
include/: bed.h  checkfiles.h  cov.h  main.h  opts.h
python/: multiheatmap.py  plot.py
src/: bed.cpp  checkfiles.cpp  cov.cpp  main.cpp  opts.cpp
src/papaya/: papaya.cpp
