cmake_minimum_required (VERSION 3.0.2)
PROJECT(COCOA) # Coverage Of Contigs Of Alignment files

## Sets version number
set(MAJOR 0)
set(MINOR 1)
set(CMAKE_CXX_STANDARD 17)

set(SEQAN_INCLUDE_PATH "${CMAKE_SOURCE_DIR}/seqan/include/")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/seqan/util/cmake/")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

FIND_PACKAGE (ZLIB REQUIRED)
if(NOT ZLIB_FOUND)
  message(FATAL_ERROR "ZLIB library not found!")
endif()

FIND_PACKAGE (BZip2 REQUIRED)
if(NOT BZIP2_FOUND)
  message(FATAL_ERROR "BZIP2 library not found!")
endif()

FIND_PACKAGE (Threads)
if(NOT THREADS_FOUND)
  message(FATAL_ERROR "THREADS library not found!")
endif()

FIND_PACKAGE (Cairo)
if(NOT CAIRO_FOUND)
  message(FATAL_ERROR "CAIRO library not found!")
endif()

set (SEQAN_FIND_DEPENDENCIES ZLIB)
FIND_PACKAGE ( SeqAn REQUIRED )
if(NOT SEQAN_FOUND)
  message(FATAL_ERROR "SeqAn library not found!")
endif()

# ZLIB & BZ2 INCLUDE
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BZIP2_INCLUDE_DIR})

# CAIRO INCLUDE
INCLUDE_DIRECTORIES(${CAIRO_INCLUDE_DIR})

# SEQAN INCLUDE
INCLUDE_DIRECTORIES(${SEQAN_INCLUDE_DIRS})
ADD_DEFINITIONS(${SEQAN_DEFINITIONS})
# Add CXX flags found by FIND_PACKAGE (SeqAn)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS}")

# MAIN INCLUDE
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

FILE(GLOB SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)

ADD_EXECUTABLE(COCOA ${SOURCES})

TARGET_LINK_LIBRARIES(COCOA ${ZLIB_LIBRARIES} ${BZIP2_LIBRARIES} ${SEQAN_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${CAIRO_LIBRARIES})

# PAPAYA INCLUDE
FILE(GLOB SOURCES ${CMAKE_SOURCE_DIR}/src/papaya/*.cpp)

ADD_EXECUTABLE(papaya ${SOURCES})
